--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                 <button class="share-btn" onclick="shareResult()">Share on WhatsApp</button>
             </div>
 
-            <!-- Services Section -->
+            <!-- Service Section -->
             <div class="services-section">
                 <div class="services-title">🌟 EKSU BRO Premium Services</div>
                 <div class="services-grid">
